Assert on cyclic geometry nodes graph in debug mode #99905

Closed
opened 2022-07-22 11:51:53 +02:00 by Cian Jinks · 6 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.98

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-22 03:59, hash: 087f27a52f
Worked:

Short description of error
Creating a cyclic graph in geometry nodes will hit an assert when using a debug build

Exact steps for others to reproduce the error
Create a cyclic graph like the following in geometry nodes while using a debug build. Any cyclic graph will cause a crash.
cyclic_graph.png
This does not appear to be an issue in the shader or compositor graphs.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.98 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-22 03:59, hash: `087f27a52f` Worked: **Short description of error** Creating a cyclic graph in geometry nodes will hit an assert when using a debug build **Exact steps for others to reproduce the error** Create a cyclic graph like the following in geometry nodes while using a debug build. Any cyclic graph will cause a crash. ![cyclic_graph.png](https://archive.blender.org/developer/F13307740/cyclic_graph.png) This does not appear to be an issue in the shader or compositor graphs.
Author
Member

Added subscriber: @HobbesOS

Added subscriber: @HobbesOS
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
* thread #1, name = 'blender', stop reason = signal SIGABRT
  * frame #0: 0x00007ffff7e1f20c libc.so.6`__pthread_kill_implementation + 284
    frame #1: 0x00007ffff7dcf838 libc.so.6`raise + 24
    frame #2: 0x00007ffff7db9535 libc.so.6`abort + 207
    frame #3: 0x0000000010dec9a9 blender`_BLI_assert_abort at BLI_assert.c:46:3
    frame #4: 0x0000000003968a75 blender`blender::nodes::NodeTreeRef::toposort(this=0x00007fffcd0c8a00, direction=RightToLeft) const at node_tree_ref.cc:607:3
    frame #5: 0x0000000003024329 blender`blender::bke::node_field_inferencing::propagate_data_requirements_from_right_to_left(tree=0x00007fffcd0c8a00, field_state_by_socket_id=const blender::MutableSpan<blender::bke::node_field_inferencing::SocketFieldState> @ 0x00007fffffffd850) at node_tree_update.cc:311:60
    frame #6: 0x0000000003023ccb blender`blender::bke::node_field_inferencing::update_field_inferencing(tree=0x00007fffcd0c8a00) at node_tree_update.cc:565:3
    frame #7: 0x0000000003029731 blender`blender::bke::NodeTreeMainUpdater::update_tree(this=0x00007fffffffdf20, ntree=0x00007fffcbf6fe88) at node_tree_update.cc:991:11
    frame #8: 0x00000000030271c7 blender`blender::bke::NodeTreeMainUpdater::update_rooted(this=0x00007fffffffdf20, root_ntrees=Span<bNodeTree *> @ 0x00007fffffffde68) at node_tree_update.cc:824:45
    frame #9: 0x0000000003023a8f blender`::BKE_ntree_update_main_tree(bmain=0x00007fffeb746108, ntree=0x00007fffcbf6fe88, params=0x00007fffffffe290) at node_tree_update.cc:1755:11
    frame #10: 0x0000000004bc3f02 blender`::ED_node_tree_propagate_change(C=0x00007ffff3f84388, bmain=0x00007fffeb746108, root_ntree=0x00007fffcbf6fe88) at node_edit.cc:453:3
    frame #11: 0x0000000004bd8678 blender`blender::ed::space_node::node_link_exit(C=0x00007ffff3f84388, op=0x00007fffcc3edb88, apply_links=true) at node_relationships.cc:932:3
    frame #12: 0x0000000004bd3977 blender`blender::ed::space_node::node_link_modal(C=0x00007ffff3f84388, op=0x00007fffcc3edb88, event=0x00007fffcd145f68) at node_relationships.cc:1069:9
    frame #13: 0x0000000003281cf5 blender`wm_handler_operator_call(C=0x00007ffff3f84388, handlers=0x00007fffeb825ca0, handler_base=0x00007fffcae1b428, event=0x00007fffcd145f68, properties=0x0000000000000000, kmi_idname=0x0000000000000000) at wm_event_system.cc:2326:16
    frame #14: 0x0000000003280778 blender`wm_handlers_do_intern(C=0x00007ffff3f84388, win=0x00007fffeb825b88, event=0x00007fffcd145f68, handlers=0x00007fffeb825ca0) at wm_event_system.cc:3229:21
    frame #15: 0x00000000032782ff blender`wm_handlers_do(C=0x00007ffff3f84388, event=0x00007fffcd145f68, handlers=0x00007fffeb825ca0) at wm_event_system.cc:3281:16
    frame #16: 0x000000000327744d blender`::wm_event_do_handlers(C=0x00007ffff3f84388) at wm_event_system.cc:3872:17
    frame #17: 0x0000000003269a37 blender`WM_main(C=0x00007ffff3f84388) at wm.c:631:5
    frame #18: 0x0000000002a7ffe9 blender`main(argc=1, argv=0x00007fffffffea08) at creator.c:547:5
    frame #19: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128
    frame #20: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138
    frame #21: 0x0000000002a7fba5 blender`_start + 37
``` * thread #1, name = 'blender', stop reason = signal SIGABRT * frame #0: 0x00007ffff7e1f20c libc.so.6`__pthread_kill_implementation + 284 frame #1: 0x00007ffff7dcf838 libc.so.6`raise + 24 frame #2: 0x00007ffff7db9535 libc.so.6`abort + 207 frame #3: 0x0000000010dec9a9 blender`_BLI_assert_abort at BLI_assert.c:46:3 frame #4: 0x0000000003968a75 blender`blender::nodes::NodeTreeRef::toposort(this=0x00007fffcd0c8a00, direction=RightToLeft) const at node_tree_ref.cc:607:3 frame #5: 0x0000000003024329 blender`blender::bke::node_field_inferencing::propagate_data_requirements_from_right_to_left(tree=0x00007fffcd0c8a00, field_state_by_socket_id=const blender::MutableSpan<blender::bke::node_field_inferencing::SocketFieldState> @ 0x00007fffffffd850) at node_tree_update.cc:311:60 frame #6: 0x0000000003023ccb blender`blender::bke::node_field_inferencing::update_field_inferencing(tree=0x00007fffcd0c8a00) at node_tree_update.cc:565:3 frame #7: 0x0000000003029731 blender`blender::bke::NodeTreeMainUpdater::update_tree(this=0x00007fffffffdf20, ntree=0x00007fffcbf6fe88) at node_tree_update.cc:991:11 frame #8: 0x00000000030271c7 blender`blender::bke::NodeTreeMainUpdater::update_rooted(this=0x00007fffffffdf20, root_ntrees=Span<bNodeTree *> @ 0x00007fffffffde68) at node_tree_update.cc:824:45 frame #9: 0x0000000003023a8f blender`::BKE_ntree_update_main_tree(bmain=0x00007fffeb746108, ntree=0x00007fffcbf6fe88, params=0x00007fffffffe290) at node_tree_update.cc:1755:11 frame #10: 0x0000000004bc3f02 blender`::ED_node_tree_propagate_change(C=0x00007ffff3f84388, bmain=0x00007fffeb746108, root_ntree=0x00007fffcbf6fe88) at node_edit.cc:453:3 frame #11: 0x0000000004bd8678 blender`blender::ed::space_node::node_link_exit(C=0x00007ffff3f84388, op=0x00007fffcc3edb88, apply_links=true) at node_relationships.cc:932:3 frame #12: 0x0000000004bd3977 blender`blender::ed::space_node::node_link_modal(C=0x00007ffff3f84388, op=0x00007fffcc3edb88, event=0x00007fffcd145f68) at node_relationships.cc:1069:9 frame #13: 0x0000000003281cf5 blender`wm_handler_operator_call(C=0x00007ffff3f84388, handlers=0x00007fffeb825ca0, handler_base=0x00007fffcae1b428, event=0x00007fffcd145f68, properties=0x0000000000000000, kmi_idname=0x0000000000000000) at wm_event_system.cc:2326:16 frame #14: 0x0000000003280778 blender`wm_handlers_do_intern(C=0x00007ffff3f84388, win=0x00007fffeb825b88, event=0x00007fffcd145f68, handlers=0x00007fffeb825ca0) at wm_event_system.cc:3229:21 frame #15: 0x00000000032782ff blender`wm_handlers_do(C=0x00007ffff3f84388, event=0x00007fffcd145f68, handlers=0x00007fffeb825ca0) at wm_event_system.cc:3281:16 frame #16: 0x000000000327744d blender`::wm_event_do_handlers(C=0x00007ffff3f84388) at wm_event_system.cc:3872:17 frame #17: 0x0000000003269a37 blender`WM_main(C=0x00007ffff3f84388) at wm.c:631:5 frame #18: 0x0000000002a7ffe9 blender`main(argc=1, argv=0x00007fffffffea08) at creator.c:547:5 frame #19: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128 frame #20: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138 frame #21: 0x0000000002a7fba5 blender`_start + 37 ```

This issue was referenced by d53ea1d0af

This issue was referenced by d53ea1d0af58cfdcd230e75ba4ac58453bdbd808
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-07-23 14:38:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99905
No description provided.