Fix T99905: wrong toposort when the node tree is cyclic